--- a/src/components/reembolsos/Reembolsos.module.scss
+++ b/src/components/reembolsos/Reembolsos.module.scss
@@ -1,3 +1,7 @@
+.body{
+    display: flex;
+}
+
 header{
     display: flex;
     justify-content: space-evenly;
@@ -10,22 +14,30 @@ header{
 }
 
 .mainRb{
+    width: 95vw;
+    height: 95vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    padding-left: 10rem;
+    align-items: center;
+    //padding-left: 20rem;
     //border: solid blue;
 }
 
 .containerCards{
-    border: solid green;
+    border: solid brown;
     display: flex;
     justify-content: space-between;
-    width: 60%;
+    width: 75%;
+    align-items: center;
 }
 
 .card{
     width: 15vw;
     height: 20vh;
-    border: solid red;
+    border: solid rgb(131, 130, 130);
+    border-radius: 6px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,7 +45,7 @@ header{
 }
 
 .containerStatus{
-    width: 60vw;
+    width: 70%;
     height: 15vh;
     border: solid;
     display: flex;
