iniciando tela de solicitacao

--- a/src/components/navbar/NavBar.module.scss
+++ b/src/components/navbar/NavBar.module.scss
@@ -1,7 +1,7 @@
 .navBarEstilo{
-    background-color: gold;
+    background-color: grey;
     height: 100vh;
-    width: 5vw;
+    width: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
